--- a/css/main.css
+++ b/css/main.css
@@ -1,217 +1,77 @@
-body{
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@300&display=swap');
+
+html, body {
+    font-family: 'Poppins';
+    font-size: 15px;
+    line-height: 1.5;
+    box-sizing: border-box;
     margin: 0;
-    padding: 0;
-    font-size: 13px;
-    font-family: Arial, Helvetica, sans-serif;
-    background-image: linear-gradient(to right, #4facfe5e 0%, #00f1fe21 100%);
+    top: 0;
+    left: 0;
 }
 
-a{
-    text-decoration: none;
-    cursor: pointer;
-    color: rgb(255, 255, 255);
+a {
+    font-weight: 500;
 }
 
-header{
-    width: 100%;
-    height: auto;
+ul{
+    list-style-type: none;
 }
 
-header nav{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    background-image: linear-gradient(to right, #2a9cff 0%, #009faa 100%);
-    width: 100%;
+.navbar{
+    background: rgb(12, 12, 12);
+    padding: 3rem 2rem;
+    height: 0rem;
+    min-height: 12vh;
 }
 
-    header nav ul{
-    margin: 10px;
-    list-style: none;
-    display: flex;
-    padding-left: 0;
-}
-
-header nav .nav-right li{
-    margin: 30px;
-}
-
-header nav .nav-left li{
-    margin: 10px;
-}
-
-header nav .nav-left{
-    justify-content: left;
-    padding-left: 30px;
-}
-
-header nav .nav-right{
-    justify-content: right;
-}
-
- nav .nav-left li a img{
-    width: 50px;
-    border-radius: 20px;
-}
-
-nav .nav-left .imagen{
-    width: 50px;
-    height: 50px;
-}
-
-nav .nav-left .imagen{
-    margin-left: 0;
-}
-
-nav .nav-left li a{
-    color: white;
-    font-size: 20px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
-}
-
-nav .nav-left .nombre{
-    margin-top: 20px;
-}
-
-footer{
-    width: 100%;
-    bottom: 0;
-    position: relative;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    background-color: #d1d6e4;
-}
-
-
-footer ul{
-    list-style: none;
-}
-
-footer ul li{
-    color: rgb(112, 112, 112);
-}
-
-main .container{
-    display: grid;
-    align-items: center;
-    height: 70vh;
-    background-image: #fff;
-    font-family: 'DM Sans' sans-serif;
-    padding: 0 20px;
-    grid-template-columns: 1fr 1fr;
-}
-
-.card-container{
-    display: grid;
-    width: 600px;
-    height: auto;
-    background-image: linear-gradient(to right, #2a9cff 0%, #0098a0 100%);
-    border-radius: 10px;
-    box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, .2);
-    padding-top: 0px;
-    grid-template-columns: 1fr 1fr;
-}
-
-main .container .card-container .foto a img{
-    width: 200px;
-    border-radius: 50%;
-    box-shadow: 0 0 0 8px rgba(0, 0, 0, .06);
-    margin: 20px 30px;
-    transition: .2s;
-}
-
-.foto{
-    border-right: 1px solid #ddd;
-
-}
-
-.foto, .datos{
-    padding: 20px;
-    text-align: center;
-    color: white;
-}
-
-.foto a{
-    position: relative;
+.navbar .navbar-brand a{
+    padding: 1rem 0;
     display: block;
+    text-decoration: none;
 }
 
-main .container .card-container .foto a img:hover {
-    box-shadow: 0 0 0 12px rgba(0, 0, 0, .2);
+.navbar-light .navbar-brand {
+    font-family: 'Pacifico', cursive;
+    font-size: 2.5rem;
+    color: #e74c3c;
 }
 
-.foto h2{
-    color: #ffffff;
+.navbar-light .navbar-brand a:hover {
+    color: #e74c3c;
 }
 
-.foto h4{
-    margin-bottom: 20px;
-    color: #ffffff;
+.navbar .navbar-brand:hover{
+    color: #e74c3c;
 }
 
-.datos{
-    position: relative;
+.navbar .navbar-nav .nav-item a:hover{
+    color: #e74c3c;
 }
 
-.datos p{
-    margin: 20px 30px;
+.navbar-toggler{
+    background: #e74c3c;
+    border: none;
+    padding: 10px 6px;
+    outline: none;
 }
 
-.datos .social{
-    margin-top: 25px;
+.navbar-toggler span{
+    display: block;
+    width: 22px;
+    height: 2px;
+    border: 1px;
+    background: #ffff;
 }
 
-.datos .social a{
-    color: #ffffff;
-    padding: 0 15px;
+.navbar-toggler span + span{
+    margin-top: 4px;
+    width: 18px;
+    margin-left: 4px;
 }
 
-.datos .social a i{
-    font-size: 30px;
-}
-
-main .container .column-2 p{
-    color: rgb(73, 73, 73);
-} 
-
-main .container .column-2 h2{
-    color: rgb(73, 73, 73);
-} 
-
-main .exp-acad{
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-}
-
-main .exp-acad h1{
-    text-align: center;
-}
-
-main .exp-acad table{
-    border: 1px solid black;
-}
-
-tr, td{
-
-    border: 2px solid black;
-    vertical-align: top;
-}
-
-main .exp-acad table tr h3{
-    text-align: center;
-}
-
-main .exp-laboral table{
-    border: 1px solid black;
-}
-
-main .exp-laboral h1{
-    text-align: center;
-}
-
-main .exp-laboral table tr h3{
-    text-align: center;
+.navbar-toggler span + span + span{
+    width: 10px;
+    margin-left: 4px;
 }
