--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ html, body {
     margin: 0;
     top: 0;
     left: 0;
+    background-color: white;
 }
 
 a {
@@ -62,7 +63,7 @@ ul{
     width: 22px;
     height: 2px;
     border: 1px;
-    background: #ffff;
+    background: white;
 }
 
 .navbar-toggler span + span{
@@ -74,4 +75,37 @@ ul{
 .navbar-toggler span + span + span{
     width: 10px;
     margin-left: 4px;
+}
+
+.navbar-expand-lg .navbar-nav .nav-link{
+    padding: 1.8rem;
+    font-size: 1.4rem;
+    position: relative;
+}
+
+.navbar-expand-lg .navbar-nav .nav-link:hover{
+    border-top: 4px solid #e74c3c;
+}
+
+.navbar-expand-lg .navbar-nav .nav-link:active{
+    border-top: 4px solid #e74c3c;
+    color: #e74c3c;
+}
+
+.navbar-nav button{
+    padding: 1.2rem 0;
+}
+
+.navbar-nav .btn {
+    background-color: #e74c3c;
+    color: white;
+    border-radius: 0;
+    padding: 1rem 1.5rem;
+    font-size: 1.2rem;
+    margin-top: 1px;
+
+}
+
+.navbar-nav .btn:hover{
+    background-color: #0a3d62;
 }
