--- a/css/main.css
+++ b/css/main.css
@@ -1,116 +1,88 @@
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@300;400&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@300&display=swap');
-
 html, body {
-    font-family: 'Poppins';
+    font-family: 'Open Sans', sans-serif;
+    color: #000000;
     font-size: 15px;
     line-height: 1.5;
     box-sizing: border-box;
     margin: 0;
     top: 0;
     left: 0;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
 }
 
-a {
-    font-weight: 500;
+a{
+    color: #83e4cf;
 }
 
-ul{
-    list-style-type: none;
-}
-
-.navbar{
-    z-index: 1;
-}
-
-.navbar .navbar-brand a{
-    padding: 1rem 0;
-    display: block;
+a:hover{
+    color: #448a8a;
     text-decoration: none;
 }
 
-.navbar-light .navbar-brand {
-    font-family: 'Pacifico', cursive;
-    font-size: 2.5rem;
-    color: #e74c3c;
+h1, h2, h3, h4, h5, h6{
+    font-family: "Roboto", sans-serif;
 }
 
-.navbar-light .navbar-brand a:hover {
-    color: #e74c3c;
+#header{
+    background: #000000;
+    padding: 15px;
 }
 
-.navbar .navbar-brand:hover{
-    color: #e74c3c;
-}
-
-.navbar .navbar-nav .nav-item a:hover{
-    color: #e74c3c;
-}
-
-.navbar-toggler{
-    background: #e74c3c;
-    border: none;
-    padding: 10px 6px;
-    outline: none;
-}
-
-.navbar-toggler span{
-    display: block;
-    width: 22px;
-    height: 2px;
-    border: 1px;
-    background: white;
-}
-
-.navbar-toggler span + span{
-    margin-top: 4px;
-    width: 18px;
-    margin-left: 4px;
-}
-
-.navbar-toggler span + span + span{
-    width: 10px;
-    margin-left: 4px;
-}
-
-.navbar-expand-lg .navbar-nav .nav-link{
-    padding: 1rem 3rem;
-    font-size: 1.4rem;
-    position: relative;
-}
-
-.navbar-expand-lg .navbar-nav .nav-link:hover{
-    border-top: 4px solid #e74c3c;
-}
-
-.navbar-expand-lg .navbar-nav .nav-link:active{
-    border-top: 4px solid #e74c3c;
-    color: #e74c3c;
-}
-
-.navbar-nav button{
+#header .logo {
+    font-size: 28px;
+    margin: 0;
     padding: 0;
+    line-height: 1;
+    font-weight: 700;
+    text-transform: uppercase;
 }
 
-.navbar-nav .btn {
-    background-color: #e74c3c;
-    color: white;
-    border-radius: 0;
-    padding: 1rem 1.5rem;
-    font-size: 1.2rem;
-    margin-top: 1px;
-
+#header .logo a{
+    color: #fff;
 }
 
-.navbar-nav .btn:hover{
-    background-color: #0a3d62;
+.nav-menu ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
- h1{
-     z-index: 0;
- }
 
- .navbar-collapse{
-     background-color: white;
-     padding-top: 0;
- }
+.nav-menu > ul{
+    display: flex;
+}
+
+.nav-menu > ul > li {
+    position: relative;
+    white-space: nowrap;
+    padding: 10px 0px 10px 22px;
+}
+
+.nav-menu a {
+    display: block;
+    position: relative;
+    color:rgb(255, 255, 255);
+    transition: 0.3s;
+    font-size: 14px;
+    font-weight: 500;
+    font-family: "Roboto", sans-serif;
+    padding: 0 4px;
+    text-transform: uppercase;
+}
+
+.nav-menu > ul > li a::before{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: -6px;
+    left: 0;
+    background-color: #448a8a;
+    visibility: hidden;
+    width: 0px;
+    transition: all 0.3s easy-in-out;
+}
+
+.nav-menu a:hover::before, .nav-menu li:hover > a::before, .nav-menu .active > a::before{
+    visibility: visible;
+    width: 100%;
+}
